prqlc/prql-compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__frames_and_names-3.snap
---
source: prqlc/prql-compiler/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from e = employees\n            join salaries (==emp_no)\n            group {e.emp_no, e.gender} (\n                aggregate {\n                    emp_salary = average salaries.salary\n                }\n            )\n            \"#).unwrap()"
---
columns:
  - Single:
      name:
        - e
        - emp_no
      target_id: 95
      target_name: ~
  - Single:
      name:
        - e
        - gender
      target_id: 96
      target_name: ~
  - Single:
      name:
        - emp_salary
      target_id: 104
      target_name: ~
inputs:
  - id: 89
    name: e
    table:
      - default_db
      - employees
  - id: 86
    name: salaries
    table:
      - default_db
      - salaries

