prqlc/prql-compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__functions_nested.snap
---
source: prqlc/prql-compiler/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            let lag_day = x -> s\"lag_day_todo({x})\"\n            let ret = x dividend_return ->  x / (lag_day x) - 1 + dividend_return\n\n            from a\n            derive (ret b c)\n            \"#).unwrap()"
---
- RqOperator:
    name: std.add
    args:
      - RqOperator:
          name: std.sub
          args:
            - RqOperator:
                name: std.div_f
                args:
                  - Ident:
                      - this
                      - a
                      - b
                  - SString:
                      - String: lag_day_todo(
                      - Expr:
                          expr:
                            Ident:
                              - this
                              - a
                              - b
                          format: ~
                      - String: )
              ty:
                kind:
                  Union:
                    - - ~
                      - kind:
                          Primitive: Int
                        span: "2:779-782"
                        name: ~
                    - - ~
                      - kind:
                          Primitive: Float
                        span: "2:786-791"
                        name: ~
                span: "2:779-791"
                name: ~
            - Literal:
                Integer: 1
              ty:
                kind:
                  Primitive: Int
                span: ~
                name: ~
        ty:
          kind:
            Union:
              - - ~
                - kind:
                    Primitive: Int
                  span: "2:970-973"
                  name: ~
              - - ~
                - kind:
                    Primitive: Float
                  span: "2:977-982"
                  name: ~
              - - ~
                - kind:
                    Primitive: Timestamp
                  span: "2:986-995"
                  name: ~
              - - ~
                - kind:
                    Primitive: Date
                  span: "2:999-1003"
                  name: ~
          span: "2:970-1003"
          name: ~
      - Ident:
          - this
          - a
          - c
  ty:
    kind:
      Union:
        - - ~
          - kind:
              Primitive: Int
            span: "2:893-896"
            name: ~
        - - ~
          - kind:
              Primitive: Float
            span: "2:900-905"
            name: ~
        - - ~
          - kind:
              Primitive: Timestamp
            span: "2:909-918"
            name: ~
        - - ~
          - kind:
              Primitive: Date
            span: "2:922-926"
            name: ~
    span: "2:893-926"
    name: ~

