prqlc/prql-compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__functions_pipeline-2.snap
---
source: prqlc/prql-compiler/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            let plus_one = x -> x + 1\n            let plus = x y -> x + y\n\n            from a\n            derive {b = (sum foo | plus_one | plus 2)}\n            \"#).unwrap()"
---
- RqOperator:
    name: std.add
    args:
      - Literal:
          Integer: 2
        ty:
          kind:
            Primitive: Int
          name: ~
      - RqOperator:
          name: std.add
          args:
            - RqOperator:
                name: std.sum
                args:
                  - Ident:
                      - this
                      - a
                      - foo
                    ty:
                      kind:
                        Array:
                          kind: Any
                          name: anytype
                      name: array
              ty:
                kind:
                  Union:
                    - - int
                      - kind:
                          Primitive: Int
                        name: int
                    - - float
                      - kind:
                          Primitive: Float
                        name: float
                name: ~
            - Literal:
                Integer: 1
              ty:
                kind:
                  Primitive: Int
                name: ~
        ty:
          kind:
            Union:
              - - int
                - kind:
                    Primitive: Int
                  name: int
              - - float
                - kind:
                    Primitive: Float
                  name: float
              - - timestamp
                - kind:
                    Primitive: Timestamp
                  name: timestamp
              - - date
                - kind:
                    Primitive: Date
                  name: date
          name: ~
  alias: b
  ty:
    kind:
      Union:
        - - int
          - kind:
              Primitive: Int
            name: int
        - - float
          - kind:
              Primitive: Float
            name: float
        - - timestamp
          - kind:
              Primitive: Timestamp
            name: timestamp
        - - date
          - kind:
              Primitive: Date
            name: date
    name: ~

