prqlc/prql-compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__functions_pipeline.snap
---
source: prqlc/prql-compiler/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            from a\n            derive one = (foo | sum)\n            \"#).unwrap()"
---
- RqOperator:
    name: std.sum
    args:
      - Ident:
          - this
          - a
          - foo
        ty:
          kind:
            Array:
              kind: Any
              span: "2:1878-1885"
              name: ~
          span: "2:1877-1886"
          name: array
  alias: one
  ty:
    kind:
      Union:
        - - ~
          - kind:
              Primitive: Int
            span: "2:4109-4112"
            name: ~
        - - ~
          - kind:
              Primitive: Float
            span: "2:4116-4121"
            name: ~
    span: "2:4109-4121"
    name: ~

