prqlc/prql-compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__variables_1.snap
---
source: prqlc/prql-compiler/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            from employees\n            derive {\n                gross_salary = salary + payroll_tax,\n                gross_cost =   gross_salary + benefits_cost\n            }\n            \"#).unwrap()"
---
- RqOperator:
    name: std.add
    args:
      - Ident:
          - this
          - employees
          - salary
      - Ident:
          - this
          - employees
          - payroll_tax
  alias: gross_salary
  ty:
    kind:
      Union:
        - - ~
          - kind:
              Primitive: Int
            span: "2:893-896"
            name: ~
        - - ~
          - kind:
              Primitive: Float
            span: "2:900-905"
            name: ~
        - - ~
          - kind:
              Primitive: Timestamp
            span: "2:909-918"
            name: ~
        - - ~
          - kind:
              Primitive: Date
            span: "2:922-926"
            name: ~
    span: "2:893-926"
    name: ~
- RqOperator:
    name: std.add
    args:
      - Ident:
          - this
          - gross_salary
      - Ident:
          - this
          - employees
          - benefits_cost
  alias: gross_cost
  ty:
    kind:
      Union:
        - - ~
          - kind:
              Primitive: Int
            span: "2:893-896"
            name: ~
        - - ~
          - kind:
              Primitive: Float
            span: "2:900-905"
            name: ~
        - - ~
          - kind:
              Primitive: Timestamp
            span: "2:909-918"
            name: ~
        - - ~
          - kind:
              Primitive: Date
            span: "2:922-926"
            name: ~
    span: "2:893-926"
    name: ~

